[package]
name = "fuel-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
geo = { version = "0.28.0", features = ["use-serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.19.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
ureq = { version = "2.9.7", features = ["gzip", "json"] }
