[package]
name = "fuel-history"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
glob = "0.3.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
typed_floats = { version = "1.0.1", features = ["serde"] }
zstd = "0.13.1"
